--- a/package.json
+++ b/package.json
@@ -5,55 +5,20 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
-    "assert": "^1.3.0",
     "bluebird": "^3.3.4",
-    "bower": "^1.6.8",
-    "browserify": "^9.0.3",
-    "coffee-script": "^1.10.0",
-    "coffeeify": "^1.0.0",
-    "csv-parser": "^1.9.3",
-    "debowerify": "^1.2.0",
-    "ejs": "~0.8.4",
-    "express": "^4.13.3",
-    "gulp": "^3.9.0",
-    "gulp-angular-templatecache": "^1.8.0",
-    "gulp-bower": "0.0.11",
-    "gulp-browserify": "^0.5.1",
-    "gulp-coffee": "^2.3.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-less": "^3.0.5",
-    "gulp-minify-css": "^1.2.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.2",
-    "gulp-util": "^3.0.7",
-    "http-server": "^0.8.5",
+    "ejs": "^2.5.6",
+    "express": "^4.15.2",
+    "helmet-csp": "^2.3.0",
     "https-proxy-agent": "^1.0.0",
-    "include-all": "~0.1.3",
-    "jquery": "^2.1.4",
-    "jquery-deparam": "^0.4.2",
-    "lodash": "^3.10.1",
-    "mocha": "^2.5.3",
-    "needle": "^0.11.0",
-    "node-xlsx": "^0.6.0",
-    "oauth2_client": "0.0.1",
-    "passport": "^0.2.1",
+    "lodash": "^4.17.4",
+    "needle": "^1.4.3",
+    "passport": "^0.3.2",
     "passport-http-bearer": "^1.0.1",
-    "promise": "^7.0.4",
-    "querystring": "^0.2.0",
-    "rc": "~0.5.0",
-    "request": "^2.67.0",
-    "sails": "~0.12.0",
-    "sails-disk": "~0.10.0",
-    "sails-hook-mongoat": "^1.0.8",
+    "promise": "^7.1.1",
+    "sails": "^0.12.11",
     "sails-hook-requestlogger-file": "^2.0.5",
-    "sails-mongo": "^0.11.4",
-    "shelljs": "^0.5.3",
-    "ssl-root-cas": "^1.2.2",
-    "supertest": "^3.0.0",
-    "supertest-as-promised": "^4.0.2",
-    "vinyl-source-stream": "^1.1.0",
-    "winston": "^2.2.0",
-    "yargs": "^3.30.0"
+    "sails-mongo": "^0.12.2",
+    "winston": "^2.3.1"
   },
   "scripts": {
     "debug": "node debug app.js",
@@ -66,5 +31,30 @@
     "url": "git://github.com/ewnchui/orgchart.git"
   },
   "author": "ewnchui",
-  "license": ""
+  "license": "",
+  "devDependencies": {
+    "browserify": "^13.3.0",
+    "coffee-script": "^1.12.2",
+    "coffeeify": "^2.1.0",
+    "debowerify": "^1.5.0",
+    "del": "^2.2.2",
+    "grunt": "^1.0.1",
+    "gulp": "^3.8.11",
+    "gulp-angular-templatecache": "^2.0.0",
+    "gulp-bower": "0.0.13",
+    "gulp-coffee": "^2.3.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-minify-css": "^1.2.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-util": "^3.0.4",
+    "mocha": "^3.2.0",
+    "node-rsa": "^0.4.2",
+    "promised-location": "^1.0.1",
+    "shelljs": "^0.7.6",
+    "supertest": "^2.0.1",
+    "supertest-as-promised": "^4.0.2",
+    "vinyl-source-stream": "^1.1.0",
+    "yargs": "*"
+  }
 }
