--- a/package.json
+++ b/package.json
@@ -5,20 +5,28 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
-    "bluebird": "^3.3.4",
+    "bluebird": "^3.5.0",
+    "browserify": "^14.1.0",
+    "coffee-script": "^1.12.4",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "gulp": "^3.9.1",
+    "gulp-coffee": "^2.3.4",
+    "gulp-concat": "^2.6.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-util": "^3.0.8",
     "helmet-csp": "^2.3.0",
     "https-proxy-agent": "^1.0.0",
     "lodash": "^4.17.4",
-    "needle": "^1.4.3",
+    "needle": "^1.5.2",
     "passport": "^0.3.2",
     "passport-http-bearer": "^1.0.1",
     "promise": "^7.1.1",
-    "sails": "^0.12.11",
+    "sails": "^0.12.13",
     "sails-hook-requestlogger-file": "^2.0.5",
     "sails-mongo": "^0.12.2",
-    "winston": "^2.3.1"
+    "shelljs": "^0.7.7",
+    "supertest-as-promised": "^4.0.2"
   },
   "scripts": {
     "debug": "node debug app.js",
@@ -33,28 +41,17 @@
   "author": "ewnchui",
   "license": "",
   "devDependencies": {
-    "browserify": "^13.3.0",
-    "coffee-script": "^1.12.2",
     "coffeeify": "^2.1.0",
     "debowerify": "^1.5.0",
     "del": "^2.2.2",
     "grunt": "^1.0.1",
-    "gulp": "^3.8.11",
     "gulp-angular-templatecache": "^2.0.0",
     "gulp-bower": "0.0.13",
-    "gulp-coffee": "^2.3.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-minify-css": "^1.2.2",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
-    "gulp-util": "^3.0.4",
     "mocha": "^3.2.0",
     "node-rsa": "^0.4.2",
     "promised-location": "^1.0.1",
-    "shelljs": "^0.7.6",
-    "supertest": "^2.0.1",
-    "supertest-as-promised": "^4.0.2",
-    "vinyl-source-stream": "^1.1.0",
-    "yargs": "*"
+    "vinyl-source-stream": "^1.1.0"
   }
 }
