add config param

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ TOKENURL=https://abc.com/auth/oauth2/token/
 MOBILEURL=https://abc.com/mobile
 ORGURL=https://abc.com/org
 SENDER_ID=1234567890123
-CLIENT_ID=orgchart
+WEB_CLIENT_ID=orgchart
 OAUTH2_SCOPE=User
 ADMIN_ID=ewnchui
 ADMIN_EMAIL=wnchui@yahoo.com
