--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "https-proxy-agent": "^1.0.0",
     "lodash": "^4.17.4",
     "needle": "^1.5.2",
+    "oauth2_client": "*",
     "passport": "^0.3.2",
     "passport-http-bearer": "^1.0.1",
     "promise": "^7.1.1",
