--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ ORGURL=https://abc.com/org
 SENDER_ID=1234567890123
 WEB_CLIENT_ID=orgchart
 OAUTH2_SCOPE=User
-ADMIN_ID=ewnchui
-ADMIN_EMAIL=wnchui@yahoo.com
+ADMIN_ID=user1
+ADMIN_EMAIL=user1@yahoo.com
 DB=mongodb://@orgchart_mongo:27017/orgchart
 # uncomment following optional env variables and customize its value
 #OAUTH2_CA=/etc/ssl/certs/selfSigned.pem
@@ -19,5 +19,5 @@ DB=mongodb://@orgchart_mongo:27017/orgchart
 #COOKIE_EXPIRE=600000
 #DB=mongodb://user@pass@im_mongo/im
 CLIENT_SECRET=pass1234
-USER_ID=jokyip
+USER_ID=user2
 USER_SECRET=pass1234
