--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
   "devDependencies": {
     "PageableAR": "*",
     "ionic": "driftyco/ionic-bower#1.0.1",
-    "sails-auth": "*",
+    "sails-auth": "0.0.5",
     "sails.io.js": "~0.13.6",
     "angular": "~1.4.10",
     "angular-animate": "1.3.13",
